# dl_sql_mcp

./: .env  .gitignore  README.md  hitting_db.txt  pitching_db.txt  pyproject.toml  requirements.txt  server.py
.specstory/history/: 2025-04-14_13-36Z-debugging-async-function-parameter-order.md  2025-04-14_14-25Z-reviewing-fastmcp-documentation-for-functionality.md  2025-04-14_14-38Z-deploying-fastmcp-server-for-non-tech-users.md  2025-04-14_18-44Z-fastmcp-configuration-for-athlete-data-access.md  2025-04-14_19-10Z-debugging-python-enoent-error-in-server.md  2025-04-14_20-28Z-querying-metrics-and-user-accessibility.md  2025-04-14_20-34Z-user-guide-for-non-tech-users.md  2025-04-14_20-44Z-enhancing-pitching-metrics-query-script.md  2025-04-18_14-19Z-expanding-database-query-functionality.md
dl_sql_mcp/: __init__.py  complete_schema.py  config.py  database.py  intelligent_query.py  main.py  tools.py
docs/: hp_db.txt
